--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,8 @@ and (orientation: portrait) {
         text-align: center;
     }
     #footer span img{
-        width: 80%;
-        margin:2em;
+        width: 100%;
+        height: 100%;
+        margin:1em 0;
     }
 }
